	  by Ronen Vainish).
	* drivers/mmcsd/mmcsd_sdio.c: If the MMC/SD driver were ever
	  uninitialized then there would be a double release of memory
	  (Noted by Ronen Vainish).
	* fs/mmap/fs_rammap.c:  Fix logic error and errno check (contributed
	  by Kate).
	* arch/avr/src: Fixes from AVR32 build errors that have crept in
	  over the time; incorporated Kconfig for AVR3 (Richard Cochran).
	* fs/fat and include/nuttx/fs/fat.h: The FAT file system allocates
	  memory for sector I/O buffers used to exchange data with the
	  configured block driver.  In some contexts, the block driver may
	  require DMA-capable memory.  If CONFIG_FAT_DMAMEMORY is defined,
	  then the FAT FS will use platform-provided DMA memory allocators
	  to allocate the block driver I/O buffers.
	* CONFIG_NET_ENC28J60 renamed CONFIG_ENC28J60 to be consistent
	  in all places.
	* drivers/enc28j60.c, include/nuttx/net/enc28j60.h, and 
	  olimex-strp711/src/up_enc28j60.c:  No longer passes IRQ number
	  as a parameters.  Instead now passes a call table to manage
	  ENC28J60 GPIO interrupts.  That is because GPIO interrupts are
	  handled in different ways by different MCUs and some do not
	  support IRQ numbers for GPIO interrupts.
	* mm/mm_gran* and include/nuttx/gran.h:  Add a simple granule-
	  based allocator.  The intent of this allocator is to support
	  simple allocation of DMA I/O buffers.  The initiali check-in
	  is code complete but untested (not event built into the
	  mm/Makefile yet.
	* confgs/fire-stm32v2: The board port is basically functional.
	  Not all features have been verified.  The ENC28J60 network
	  is not yet functional.
	* configs/stm3240g-eval/discover:  A configuration for testing
	  the UDP discovery utility.  Contributed by Max Holtzberg.
	* mm/README.txt:  Add a new README file.
	* include/nuttx/usb/usb.h, arch/*/src/*usb.c, and arch/*/src/*otg*.c:
	  Add hooks to to use common, external DMA buffer allocation
	  implementation.
